- Memory debugging support

--- a/source/xdebugviewer.cfg
+++ b/source/xdebugviewer.cfg
@@ -31,9 +31,9 @@
 -M
 -$M16384,1048576
 -K$00400000
--E"D:\_weby\data\www\work\X-anal\binary"
--LE"C:\Users\Andrew\Documents\Borland Studio Projects\Bpl"
--LN"C:\Users\Andrew\Documents\Borland Studio Projects\Bpl"
+-E"..\binary"
+-LE"C:\Users\Rangel\Documents\Borland Studio Projects\Bpl"
+-LN"C:\Users\Rangel\Documents\Borland Studio Projects\Bpl"
 -w-UNSAFE_TYPE
 -w-UNSAFE_CODE
 -w-UNSAFE_CAST
